--- a/t.css
+++ b/t.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Kanit', sans-serif;
 }
 
 body {
@@ -23,7 +26,7 @@ body {
 }
 
 .card {
-    width: 100%;
+    width: 1000vh;
     height: 100%;
     margin-right: 10px;
     background-color: #cecece;
